# nebius-ps-services

./: README.md
.github/: CODEOWNERS  dependabot.yml
examples/inference/deepspeed-lmcache/: .envrc  THIRD_PARTY_LICENSES.md  volume.sky.yaml
examples/inference/vllm/: .gitignore  bloom176b-inference-vllm.yaml  nebiaus-sa-setup.sh  qwen72b-bench-vllm.yaml  qwen72b-inference-vllm.yaml  template.sky.yaml  test-vllm.sh
examples/inference/vllm/image/: generate-image.md  simple_nn.dot
examples/inference/vllm/templates/: bloom-chat.jinja
examples/skypilot-config/: .sky.yaml  README.md  mytask.yaml
examples/skypilot/skypilot-inference/: .template.env  README.md  THIRD_PARTY_LICENSES.md  bloom176b-inference-vllm.yaml  generate-sky-config.sh  qwen72b-inference-vllm.yaml  skypilot-install.sh
examples/skypilot/skypilot-inference/doc/: inference-overview.md  overview.md  vllm-overview.md
examples/skypilot/skypilot-inference/image/: generate-image.md  kv_attention_example.dot  simple_nn.dot
examples/skypilot/skypilot-private-cluster/: .env.placeholder  .gitignore  README.md  bootstrap-awscli-only.sky.yaml  generate-sky-config.sh  k8s-gpu-task.yaml  nebiaus-sa-setup.sh  skypilot-install.sh  vmtask.yaml
helm-charts/rayclusterapp/: .gitignore  Dockerfile  README.md  raycluster-values.yaml  train.py
helm-charts/rayclusterapp/kueue-bootstrap/: Chart.yaml  values.yaml
helm-charts/rayclusterapp/kueue-bootstrap/templates/: clusterqueue.yaml  cohort.yaml  resourceflavor.yaml
helm-charts/rayclusterapp/ray-job/: Chart.yaml  values.yaml
helm-charts/rayclusterapp/ray-job/templates/: _helper.tpl  kueue-localqueue.yaml  rayjob.yaml
services/bootstrap-k8s/: .env  .gitignore  README.md  bootstrap-k8s.sh
services/bootstrap-k8s/.github/: overview-design.md
services/jumphost/: README.md  cloud-init.sh
services/vpngw/: .gitignore  LICENSE  ORPHANED_ROUTES_REVIEW.md  README.md  README.md.backup  nebius-sdktest.py  nebius-vpngw-config.min.yaml  nebius-vpngw-config.yaml  network.sh  pyproject.toml
services/vpngw/doc/: design.md  design.txt
services/vpngw/image/: README.md  vpngw-architecture.dot  vpngw-conn-diagram.dot
services/vpngw/src/: pyproject.toml
services/vpngw/src/nebius_vpngw/: __init__.py  __main__.py  build.py  cli.py  config_loader.py  config_template.py  nebius-vpngw-config-template.config.yaml  nebius-vpngw-config-template.yaml  schema.py  vpngw_sa.py
services/vpngw/src/nebius_vpngw/agent/: firewall_manager.py  frr_renderer.py  main.py  routing_guard.py  sanity_check.py  state_store.py  status_check.py  strongswan_renderer.py  tunnel_iterator.py
services/vpngw/src/nebius_vpngw/deploy/: route_manager.py  ssh_push.py  vm_diff.py  vm_manager.py
services/vpngw/src/nebius_vpngw/peer_parsers/: __init__.py  aws.py  azure.py  cisco.py  gcp.py
services/vpngw/src/nebius_vpngw/scripts/: vpngw-updown
services/vpngw/src/nebius_vpngw/systemd/: fix-routes.sh  ipsec-vti.sh  nebius-vpngw-agent.service  nebius-vpngw-fix-routes.service  nebius-vpngw-fix-routes.timer
