[project]
name = "nebius-vpngw"
version = "0.1.0"
description = "Nebius VM-based VPN Gateway orchestrator and agent"
readme = "README.md"
authors = [ { name = "Reza. B.", email = "rezab@nebius.com" } ]
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
classifiers = [
	"License :: Copyright 2025 Nebius B.V.",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only"
]

# Python package dependencies (installed via pip)
# All versions verified compatible with Python 3.12.12 (December 2025)
dependencies = [
	"PyYAML>=6.0.3,<7.0.0",
	"paramiko>=3.5.0,<5.0.0",
	"rich>=14.2.0,<15.0.0",
	"click>=8.3.0,<9.0.0",
	"typer>=0.20.0,<1.0.0",
	"pydantic>=2.12.0,<3.0.0",
	"nebius",
	"build>=1.3.0,<2.0.0"
]

# System dependencies (installed via apt on Ubuntu 24.04):
# - strongswan >= 5.9.x (for XFRM interface support with if_id parameter)
# - strongswan-pki
# - libcharon-extra-plugins
# - frr >= 10.5.0 (RECOMMENDED - use official FRR repo, not Ubuntu 24.04's 8.4.4)
#   * Ubuntu 24.04 ships FRR 8.4.4 which has known route installation bugs
#   * Install from https://deb.frrouting.org/frr/ for FRR 10.5.0+
# - frr-pythontools
# - python3, python3-pip, python3-yaml
#
# Cloud-init installs packages automatically on VM creation (see vm_manager.py).
# For FRR upgrade, manually add FRR official repo before deployment or in cloud-init.

[project.scripts]
nebius-vpngw = "nebius_vpngw.__main__:main"
nebius-vpngw-agent = "nebius_vpngw.agent.main:main"
build-binary = "nebius_vpngw.build:build_binary"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PyYAML = ">=6.0.3,<7.0.0"
paramiko = ">=3.5.0,<5.0.0"
rich = ">=14.2.0,<15.0.0"
click = ">=8.3.0,<9.0.0"
typer = ">=0.20.0,<1.0.0"
pydantic = ">=2.12.0,<3.0.0"
nebius = "*"
build = ">=1.3.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.0,<10.0.0"
ruff = ">=0.14.0,<1.0.0"
pyinstaller = ">=6.17.0,<7.0.0"

[tool.poetry]
# Retain tool.poetry table for packaging-specific settings not covered by PEP 621.
# (Dependencies, groups, packages, include remain here.)
packages = [{ include = "nebius_vpngw", from = "src" }]
include = [
    "src/nebius_vpngw/nebius-vpngw-config-template.config.yaml",
    "src/nebius_vpngw/systemd/*"
]

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
