#############################################
# Deprecated pyproject.toml (moved to root) #
#############################################

# The active project configuration now lives at:
#   ../pyproject.toml
# This stub remains only because file deletion failed in automation.
# Do NOT run 'poetry' commands from this directory.

[tool.poetry]
name = "deprecated-nebius-vpngw-src-layout"
version = "0.0.0"
description = "Deprecated stub; use repository root pyproject.toml"
